--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,6 +16,7 @@
   @import 'components/descripcion';
   @import 'components/footer';
   @import 'components/back_top_up';
+  @import 'components/_page_404'
 
   
   
