--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -858,6 +858,10 @@ section {
   color: #fff;
 }
 
+.contact textarea.form-control {
+  resize: none;
+}
+
 .contact .php-email-form .form-group {
   padding-bottom: 8px;
 }
@@ -1202,7 +1206,7 @@ section {
   text-align: center;
 }
 
-button {
+button.inicio {
   padding: 0.625rem 1.25rem; /*10px 20px*/
   background-color: #49b5e7;
   border-color: #49b5e7;
@@ -1213,16 +1217,16 @@ button {
   cursor: pointer;
 }
 
-button a {
+button.inicio a {
   color: #fff;
   text-decoration: none;
 }
 
-button a:hover {
+button.inicio a:hover {
   color: #fff;
 }
 
-button:hover {
+button.inicio:hover {
   background-color: #1da2e0;
   border-color: #1da2e0;
 }
@@ -1244,7 +1248,7 @@ button:hover {
   .no-found p {
     font-size: 1rem;
   }
-  .no-found button {
+  .no-found button.inicio {
     padding: 0.43rem 0.93rem;
   }
 }
