se corrige ortografia y se agrega formulario a cada uno de los servicios

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -862,6 +862,15 @@ section {
   resize: none;
 }
 
+.contact input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.contact input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .contact .php-email-form .form-group {
   padding-bottom: 8px;
 }
