--- a/assets/scss/components/_contacto.scss
+++ b/assets/scss/components/_contacto.scss
@@ -45,6 +45,15 @@
   .contact textarea.form-control{
     resize: none;
   }
+
+  .contact input::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+     margin: 0;
+  }
+
+  .contact input[type=number]{
+    -moz-appearance: textfield;
+  }
   
   .contact .php-email-form .form-group {
     padding-bottom: 8px;
