cambios en el navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,7 +242,7 @@ section {
 .navbar .dropdown .dropdown ul {
   top: 0;
   left: calc(100% - 30px);
-  visibility: hidden;
+  visibility: visible; /*campo mobile visible*/
 }
 .navbar .dropdown .dropdown:hover > ul {
   opacity: 1;
